name:                job-scheduler
version:             0.1.0.0
synopsis:            Simple in-memory job scheduling
description:         Simple in-memory job scheduling
homepage:            https://github.com/binarysunrise-io/job-scheduler
license:             BSD3
license-file:        LICENSE
author:              Jesse Kempf
maintainer:          jesse.kempf@binarysunrise.io
copyright:           2017 Binary Sunrise, Inc.
category:            Scheduling
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , job-scheduler
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/binarysunrise-io/job-scheduler
